style: Small tweaks.

--- a/.dfx/local/canisters/assets/assets/index.html
+++ b/.dfx/local/canisters/assets/assets/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/assets/favicon.17e50649.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
-  <script type="module" crossorigin src="/assets/index.d5d24ec2.js"></script>
+    <title>IC Cafe</title>
+  <script type="module" crossorigin src="/assets/index.6e4641b9.js"></script>
   <link rel="modulepreload" href="/assets/vendor.8130cf78.js">
   <link rel="stylesheet" href="/assets/index.2d7540ed.css">
 </head>
